# OctoPrint-Tasmota

./: MANIFEST.in  README.md  Taskfile.yml  changelog.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: stale.yml
octoprint_tasmota/: __init__.py
octoprint_tasmota/static/css/: tasmota.css
octoprint_tasmota/static/js/: ko.observableDictionary.js  plotly-latest.min.js  tasmota.js
octoprint_tasmota/templates/: tasmota_navbar.jinja2  tasmota_settings.jinja2  tasmota_sidebar.jinja2  tasmota_sidebar_header.jinja2  tasmota_tab.jinja2
